--- a/web/publics/zeco_info/css/style.css
+++ b/web/publics/zeco_info/css/style.css
@@ -29,6 +29,15 @@ nav {
     padding: 5px 5%;
 }
 
+.cool {
+    background-color: transparent;
+    z-index: 100;
+}
+
+.cool a {
+    color: blue;
+}
+
 .nom-prenom {
     color: white;
     margin-left: 15px;
@@ -93,6 +102,7 @@ nav {
     display: flex;
     justify-content: space-between;
     height: 100%;
+    padding-bottom: 30px;
 }
 
 .main-content {
