--- a/web/publics/zeco_info_partage/css/style.css
+++ b/web/publics/zeco_info_partage/css/style.css
@@ -34,6 +34,14 @@ nav {
     padding: 5px 5%;
 }
 
+.cool {
+    background-color: #FFFFFF;
+}
+
+.cool a {
+    color: blue;
+}
+
 #notification {
     visibility: hidden;
     display: none;
@@ -97,11 +105,6 @@ nav {
 .body-content {
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 5%;
-}
-
-.main-content {
-    width: 50%;
-    margin-left: 10%;
-    margin-right: 10px;
+    padding-bottom: 10%;
+    overflow-y: auto;
 }
