--- a/web/views/actualite.ejs
+++ b/web/views/actualite.ejs
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
-
     <style>
         nav {
             display: flex;
@@ -58,54 +57,72 @@
         .cool a {
             color: blue;
         }
+        
+        .nom-prenom {
+            color: white;
+            margin-left: 15px;
+        }
+        
+        @media screen and (max-width: 700px) {
+            .col {
+                width: 100%;
+            }
+            #liste {
+                padding-bottom: 20%;
+            }
+        }
+        
+        @media screen and (min-width: 701px) and (max-width: 1000px) {
+            .col {
+                width: 50%;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <nav>
-        <div class="nav-left">
-            <a href="/home"><img src="/images/logo.png" alt="ZECO APP" class="logo"></a>
-        </div>
+    <% if(identifiant.pseudo === undefined){ %>
+        <%- include('redirect'); %>
+            <% } else { %>
+                <nav>
+                    <div class="nav-left">
+                        <a href="/home"><img src="/images/logo.png" alt="ZECO APP" class="logo"></a>
+                    </div>
 
-        <div class="nav-right">
-            <div class="nav-user">
-                <a href="" class="btn dropdown-toggle" data-bs-toggle="dropdown"> <img src="/images/user-logo.jpg" alt=""><span class="nom-prenom"></span>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/profil">Mon profil</a></li>
-                        <li><a class="dropdown-item" href="/notifications">Mes notifications</a></li>
-                        <hr>
-                        <li><a class="dropdown-item" href="/disconnect">Déconnexion</i></a></li>
-                    </ul>
-            </div>
-        </div>
-    </nav>
-    <br>
-    <nav aria-label="breadcrumb" class="cool">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Actualités twitters</li>
-        </ol>
-    </nav>
-    <br>
-    <div class="container">
-        <div class="row row-cols-3">
-            <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" data-dnt="true" href="https://twitter.com/ONUDC_AfriqueOC?ref_src=twsrc%5Etfw" data-chrome="nofooter">
-            Tweets by ONUDC_AfriqueOC
-        </a> </div>
-            <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/uncaccoalition?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by uncaccoalition</a></div>
-            <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/unodc?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by UNODC</a></div>
-            <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/17iacc-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by 17iacc-journalists</a></div>
-            <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/18iacc-young-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by 18iacc-young-journalists</a></div>
-
-            <div class="col">
-                <a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/18iacc-young-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">A Twitter List by anticorruption</a>
-            </div>
-        </div>
-    </div>
-
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    </div>
+                    <div class="nav-right">
+                        <div class="nav-user">
+                            <a href="" class="btn dropdown-toggle" data-bs-toggle="dropdown"> <img src="/images/user-logo.jpg" alt=""><span class="nom-prenom"><%= identifiant.pseudo %></span>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Mon profil</a></li>
+                                    <li><a class="dropdown-item" href="#">Mes notifications</a></li>
+                                    <hr>
+                                    <li><a class="dropdown-item" href="#">Déconnexion</i></a></li>
+                                </ul>
+                        </div>
+                    </div>
+                </nav>
+                <br>
+                <nav aria-label="breadcrumb" class="cool">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/home">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Actualités twitters</li>
+                    </ol>
+                </nav>
+                <br>
+                <div class="container" id="liste">
+                    <div class="row row-cols-3" id="block">
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" data-dnt="true" href="https://twitter.com/ONUDC_AfriqueOC?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by ONUDC_AfriqueOC</a> </div>
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/uncaccoalition?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by uncaccoalition</a></div>
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/unodc?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by UNODC</a></div>
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/17iacc-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by 17iacc-journalists</a></div>
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/18iacc-young-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">Tweets by 18iacc-young-journalists</a></div>
+                        <div class="col"><a class="twitter-timeline" data-lang="fr" data-width="300" data-height="400" href="https://twitter.com/anticorruption/lists/18iacc-young-journalists?ref_src=twsrc%5Etfw" data-chrome="nofooter">A Twitter List by anticorruption</a></div>
+                    </div>
+                </div>
+                <%}%>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                    </div>
 </body>
 
 </html>
