--- a/web/views/enquete2.ejs
+++ b/web/views/enquete2.ejs
@@ -29,61 +29,65 @@
 
 <body>
     <div class="body">
-        <!-- Navigation bar -->
-        <nav>
-            <div class="nav-left">
-                <a href="/home"><img src="/images/logo.png" alt="ZECO APP" class="logo"></a>
-                <ul>
-                    <li> <i class="far fa-bell"></i> </li>
-                    <li> <i class="far fa-envelope"></i> </li>
-                    <li> <i class="fas fa-photo-video"></i> </li>
-                </ul>
 
-            </div>
+        <% if(identifiant.pseudo === undefined){ %>
+            <%- include('redirect'); %>
+                <% } else { %>
+                    <!-- Navigation bar -->
+                    <nav>
+                        <div class="nav-left">
+                            <a href="/home"><img src="/images/logo.png" alt="ZECO APP" class="logo"></a>
 
-            <div class="nav-right">
-                <div class="nav-user">
-                    <a href="" class="btn dropdown-toggle" data-bs-toggle="dropdown"> <img src="/images/user-logo.jpg" alt=""><span class="nom-prenom"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/profil">Mon profil</a></li>
-                        <li><a class="dropdown-item" href="/notifications">Mes notifications</a></li>
-                        <li><a class="dropdown-item" href="/disconnect">Déconnexion</i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+                        </div>
 
-        <div class="body-content">
+                        <div class="nav-right">
+                            <div class="nav-user">
+                                <a href="" class="btn dropdown-toggle" data-bs-toggle="dropdown"> <img src="/images/user-logo.jpg" alt=""><span class="nom-prenom"><%= identifiant.pseudo %></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Mon profil</a></li>
+                                    <li><a class="dropdown-item" href="#">Mes notifications</a></li>
+                                    <li><a class="dropdown-item" href="#">Déconnexion</i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
 
-        </div>
+                    <div class="body-content">
 
+                    </div>
+                    <%}%>
     </div>
 
 
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <!-- <script src="/socket.io/socket.io.js" type="text/javascript"></script> -->
     <script>
         var chemin = window.location.href;
         var url = new URL(chemin);
         var search_params = new URLSearchParams(url.search);
 
-        var socket = io.connect();
-
-        socket.on('identifiant', function(data) {
-            document.querySelector('.nom-prenom').innerHTML = data.pseudo;
-        });
 
         let box = document.querySelector('.body-content');
-        box.innerHTML = sessionStorage.getItem('formulaire');
 
-        box.insertAdjacentHTML('afterend', sessionStorage.getItem('formulaire'));
+        if (search_params.has('idee')) {
+            let formulaire = '<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe-DEK8IpQH6DrHoyGzkqh04rw-moTTEuP4hUomUyinAw_2Bg/viewform?embedded=true" width="640" height="1180" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>';
+            let lienpartage = 'https://docs.google.com/forms/d/e/1FAIpQLSe-DEK8IpQH6DrHoyGzkqh04rw-moTTEuP4hUomUyinAw_2Bg/viewform?usp=sf_link';
+            box.innerHTML = formulaire;
+        } else {
+            box.innerHTML = sessionStorage.getItem('formulaire');
 
+            box.insertAdjacentHTML('afterend', sessionStorage.getItem('formulaire'));
+
+
+            // console.log(etape.getAttribute('width') + " - " + etape.getAttribute('height'))
+        }
         let etape = document.querySelector('iframe')
 
         // sessionStorage.getItem('formulaire').getAttribute('width')
         etape.setAttribute('width', '100%')
         etape.setAttribute('height', '100%')
-        console.log(etape.getAttribute('width') + " - " + etape.getAttribute('height'))
     </script>
+
+
 
 </body>
 
