--- a/web/views/preview.ejs
+++ b/web/views/preview.ejs
@@ -12,13 +12,8 @@
 
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         @media screen,
         print {
@@ -97,24 +92,25 @@
         </div>
 
         <div class="objet-lettre">
-            <u>Objet: </u> Dépôt de plainte contre la corruption
+            <u>Objet: </u> Dépôt de plainte contre la corruption <br>
+            <u>Code de la plainte:</u> <b><span class="code_plainte"><%= plainte.code %></span></b>
         </div>
 
         <div class="corps-lettre">
-            Chère organisation, <br>
-            <br> Je soussigné(e) (nom et prénom), né(e) le (date de naissance) à (lieu de naissance) et exerçant la profession de (profession), vous informe porter plainte contre (nom et prénom / nom de l'entreprise / nom de l'organisation / ou X si personne
-            non connue), résidant à (nommer l'adresse de la personne ou de l'entreprise concernée) pour (qualification de l'infraction). <br>
+            Monsieur/Madame, <br>
+            <br> Nous venons par la présente porter plainte contre <b><span class="acteurs"> <%= plainte.organisme %> </span></b> exerçant dans l'entreprise : <b><span class="entreprise"><%= plainte.entreprise %></span></b> situé à:
+            <b><span class="lieu"><%= plainte.lieu %></span></b> au <b><span class="pays"><%= plainte.pays %></span></b> <br> <br> et dans le service : <b><span class="service"><%= plainte.service %></span>.</b> <br>
 
-            <br> Je viens par la présente porter plainte contre le service <span class="nom-service"></span> de la société <span class="nom-entreprise"></span> pour un acte de corruption<br>
+            <hr> Cause : <b><span class="cause"><%= plainte.objet %></span>.</b>
+            <br> Faits racontés: <br>
+            <b><span class="fait"><%= plainte.description %></span>.</b> <br>
+            <br> Date des faits: <b><span class="fait_date"><%= plainte.date %></span>.</b> <br>
+            <br> Statuts: <b><span class="statut"><%= plainte.statut %></span>.</b> <br><br> Je joins à cette lettre les documents / photos / preuves qui pourraient se révéler utiles dans la suite de cette affaire (attention à joindre des copies et non
+            des originaux).<br>
 
-            <br>En date du (date de l'événement), j'ai en effet été victime des faits suivants : (indiquer le plus précisément possible le détail des faits ainsi que le lieu où ils se sont produits, l'heure de l'événement et les personnes impliquées dans
-            l'infraction). Je joins à cette lettre les documents / photos / preuves qui pourraient se révéler utiles dans la suite de cette affaire (attention à joindre des copies et non des originaux).<br>
 
-            <br>Facultatif :
-            <br>Plusieurs personnes ont été témoins de l'infraction mentionnée ci-dessus. Il s'agit de Madame / Monsieur (noms et prénoms), résidant à (adresse des témoins) et joignables au numéro suivant (numéro de téléphone des témoins). <br>
-
-            <br>Dans ces conditions, je vous prie de bien vouloir enregistrer mon dépôt de plainte afin de donner une suite légale à cette affaire et de faire valoir mes droits. Je vous prie d'agréer, Madame, Monsieur le Procureur, l'expression de mes
-            sentiments les meilleurs. <br>
+            <br>Dans ces conditions, je vous prie de bien vouloir enregistrer mon dépôt de plainte afin de donner une suite légale à cette affaire et de faire valoir mes droits. Je vous prie d'agréer, Madame, Monsieur de recevoir l'expression de mes salutations
+            les meilleurs. <br>
 
             <br>Anonyme
         </div>
@@ -130,22 +126,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- JSPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-    <script>
-        let socket = io.connect();
-
-        socket.on('redirect', function(data) {
-            console.log('dedans');
-            if (data === true)
-                window.location.href = '/home?save';
-        });
-
-        const timeElapsed = Date.now();
-        const today = new Date(timeElapsed);
-        document.getElementById("date").innerHTML = today.toLocaleDateString();
-    </script>
-
-
 </body>
 
 </html>
